# rust_book

./: README.md  gpg_test
add/add_one/src/: lib.rs
add/add_two/src/: lib.rs
add/adder/src/: main.rs
advanced_features/: Cargo.toml
advanced_features/src/: hello_macro_build_output.txt  main.rs
aggregator_ivanbgd/: Cargo.toml
aggregator_ivanbgd/src/: lib.rs
art/src/: lib.rs  main.rs
collections/src/: main.rs
concurrency/: main.rs
employees/src/: constants.rs  lib.rs  main.rs
employees/tests/: integration_test.rs
enums/src/: main.rs
error_handling/src/: main.rs
generics/: Cargo.toml
generics/src/: main.rs
hello/: README.md
hello/src/: constants.rs  error_consts.rs  lib.rs  main.rs
hello/templates/: 404.html  hello.html  sleep.html  sleep_counter.html
hello_macro/hello_macro_derive/src/: lib.rs
hello_macro/src/: lib.rs
minigrep/: Cargo.toml  README.md
minigrep/src/: lib.rs  main.rs
oop/: Cargo.toml
oop/averaged_collection/: Cargo.toml
oop/averaged_collection/src/: lib.rs
oop/blog_oop/: Cargo.toml
oop/blog_oop/src/: lib.rs
oop/blog_rust/: Cargo.toml
oop/blog_rust/src/: lib.rs
oop/gui/: Cargo.toml
oop/gui/src/: lib.rs
oop/oop/: Cargo.toml
oop/oop/src/: main.rs
patterns_and_matching/src/: main.rs
restaurant/src/: lib.rs
restaurant_split/src/: front_of_house.rs  lib.rs
restaurant_split/src/back_of_house/: mod.rs
shirt_company/src/: main.rs
smart_pointers/: lib.rs  main.rs
smart_pointers/src/: main.rs
structs/src/: main.rs
writing_tests/src/: lib.rs
writing_tests/tests/: integration_test.rs
(+3 files in other folders)
